# openai-chatkit-advanced-samples

examples/voice-automation/: 30_STEP_PLAN_PART1.md  FULL_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README.md  TESTING_RESULTS.md
examples/voice-automation-platform/: CHATKIT_INTEGRATION.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  README.md  TEST.md  dev-start.ps1  dev-start.sh  setup.ps1  setup.py  setup.sh
examples/voice-automation-platform/backend/: .env.example  requirements.txt
examples/voice-automation-platform/backend/app/: __init__.py  config.py  main.py  memory_store.py
examples/voice-automation-platform/examples/: workflow_01_research_report.py  workflow_02_code_review.py  workflow_03_web_scraping.py  workflow_04_file_processing.py  workflow_05_multi_agent.py
examples/voice-automation-platform/frontend/: .env.example  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
examples/voice-automation-platform/tests/: test_vision_integration.py
examples/voice-automation/backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_standalone.py
examples/voice-automation/backend/app/: __init__.py  main.py  memory_store.py  voice_agent.py
examples/voice-automation/backend/app/tools/: __init__.py  browser_tool.py  cli_tool.py
examples/voice-automation/backend/app/widgets/: __init__.py
examples/voice-automation/backend/tests/: conftest.py  test_main.py  test_memory_store.py  test_voice_agent.py
examples/voice-automation/frontend/: .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
(+44 files in other folders)
